Fixing language on password reset forms.
Fixing http://pmt.ccnmtl.columbia.edu/item/87679/

--- a/teachdentistry/templates/registration/password_reset_form.html
+++ b/teachdentistry/templates/registration/password_reset_form.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block registration_content %}
-<h2 class="pagetitle signuptitle">Reset username or password</h2>
+<h2 class="pagetitle signuptitle">Reset password</h2>
 
 <div class="p">Forgot your password? Enter your email in the form below and you will receive instructions for creating a new one.</div>
 
