--- a/teachdentistry/templates/quizblock/edit_question.html
+++ b/teachdentistry/templates/quizblock/edit_question.html
@@ -5,9 +5,8 @@
 
 
 <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.3/themes/base/jquery-ui.css" type="text/css" media="all" /> 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"
-        type="text/javascript" ></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.3/jquery-ui.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="/site_media/js/jquery-ui-1.10.3.min.js"></script>
+
 
 <script type="text/javascript">
 var saveOrder = function() {
@@ -25,6 +24,20 @@ var saveOrder = function() {
     }
 };
 
+</script>
+
+<script type="text/javascript">
+jQuery(function() {
+  jQuery("#answers").sortable({
+    containment : 'parent'
+    ,axis : 'y'
+    ,tolerance: 'pointer'
+    ,activeClass: 'dragging'
+    ,handle: '.draghandle'
+    ,stop: function (event,ui) { saveOrder();}
+  });
+  jQuery("#answers").disableSelection();
+});
 </script>
 
 <style type="text/css">
@@ -81,19 +94,9 @@ Answer {{ answer.display_number }}:
 </form>
 {% endif %}
 
-<script type="text/javascript">
-jQuery(function() {
-  jQuery("#answers").sortable({
-    containment : 'parent'
-    ,axis : 'y'
-    ,tolerance: 'pointer'
-    ,activeClass: 'dragging'
-    ,handle: '.draghandle'
-    ,stop: function (event,ui) { saveOrder();}
-  });
-  jQuery("#answers").disableSelection();
-});
-</script>
+
+
+
 
 
 {% endblock %}
