--- a/teachdentistry/templates/main/instructor_page.html
+++ b/teachdentistry/templates/main/instructor_page.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_teachdentistry.html" %}
 
 {% block title %}{{section.label}} (instructor){% endblock %}
 {% block sidenav %}
