--- a/teachdentistry/templates/base_teachdentistry.html
+++ b/teachdentistry/templates/base_teachdentistry.html
@@ -100,13 +100,13 @@
         <div class="container-fluid" id="content">
             <div class="row-fluid">
             {% block container %}
-                {% if request.user.is_superuser %}
-                <div class="span2" id="sidebar" style="background-color: #efefef;">
-                Only superuser can see this side bar
-                </div>
-                {% endif %}
-                <div class="{% if request.user.is_superuser %}span10{% else %}span12{% endif %}" id="right-content">
+                <div class="span12" id="right-content">
+                    {% if request.user.is_superuser %}
+                    <div class="admin-sign">Admin</div>
+                    {% endif %}
+                    {% block instructor-view-responses %}{% endblock %}
                     {% if can_edit %}
+                    <br />
                     <ul class="nav nav-pills">
                         <li><a style="color: #000;"><b>Page mode:</b></a></li>
                         {% block mode-view %}<li class="active"><a>View</a></li>{% endblock %}
@@ -128,7 +128,7 @@
     </div>
 
     {% block footer %}
-    <footer class="footer hidden-phone">
+    <footer class="footer">
         <a href="http://dental.columbia.edu/" target="_blank" title="Columbia University College of Dental Medicine"><img src="/site_media/img/logo_dental_school.png" /></a>
         <a href="http://ccnmtl.columbia.edu" target="_blank" title="Columbia Center for New Media Teaching and Learning"><img src="/site_media/img/logo_ccnmtl.png" /></a>
     </footer>
