--- a/teachdentistry/templates/flatpages/default.html
+++ b/teachdentistry/templates/flatpages/default.html
@@ -10,7 +10,7 @@
 {% block primarynav %}{% endblock %}
 {% block carousel_slideshow %}{% endblock %}
 {% block breadcrumbs %}{% endblock %}
-{% block pagetitle %}<h2 class="pagetitle">{{ flatpage.title }}</h2>{% endblock %}
+{% block pagetitle %}<h2 class="pagetitle flatpagetitle">{{ flatpage.title }}</h2>{% endblock %}
 
 {% load markup %}
 {% load thumbnail %}
