--- a/teachdentistry/templates/registration/login.html
+++ b/teachdentistry/templates/registration/login.html
@@ -64,7 +64,7 @@ Log in
 	</div>
 	<div class="item-tab" id="tabs-3">
 		<h2>Everyone has something to offer</h2>
-		<p><i>“We need so many talented men and women in academia - the doors are wide open to all of you. We need you. Come on and join.”</i> ~ Dennis Mitchell, DDS, MPH</p>
+		<p><i>“We need so many talented men and women in academia - the doors are wide open to all of you. We need you. Come on and join.”</i><br />~ Dennis Mitchell, DDS, MPH</p>
 
         <p>Find out about the different paths that have brought your peers to teach dentistry and how you can do it, too.</p>
 	</div>
