--- a/teachdentistry/templates/registration/registration_form.html
+++ b/teachdentistry/templates/registration/registration_form.html
@@ -55,7 +55,7 @@
     <form method="post" action="." class="register">
       {{ form.as_p }}
       
-      <input class="btn btn-primary" type="submit" value="{% trans 'Submit' %}" />
+      <input class="btn btn-primary" type="submit" value="{% trans 'Sign up!' %}" />
     </form>
 
 {% endblock %}
