--- a/teachdentistry/templates/registration/password_reset_complete.html
+++ b/teachdentistry/templates/registration/password_reset_complete.html
@@ -1,10 +1,11 @@
 {% extends "registration/base_registration.html" %}
 {% load i18n %}
 
+{% block title %}Password reset complete{% endblock %}
 {% block registration_content %}
 
-<p>{% trans "Password reset successfully" %}</p>
+<h2 class="pagetitle signuptitle">Password reset completed</h2>
 
-<p><a href="/">{% trans "Log in" %}</a></p>
+<div class="p">Your password has been reset!  You may now  <a href="/">log in</a> to access Teach Dentistry.</div>
 
 {% endblock %}
