--- a/teachdentistry/templates/registration/password_reset_confirm.html
+++ b/teachdentistry/templates/registration/password_reset_confirm.html
@@ -1,19 +1,25 @@
 {% extends "registration/base_registration.html" %}
 {% load i18n %}
 
+{% block title %}Confirm password reset{% endblock %}
 {% block registration_content %}
+
+<h2 class="pagetitle signuptitle">Confirm password reset</h2>
 
 {% if validlink %}
 
+<div class="p">Enter your new password below to reset your password:</div>
+
+<div class="password-reset">
 <form method="post" action=".">
   {{ form.as_p }}
 
-  <input type="submit" value="{% trans 'Submit' %}" />
+  <input class="reset-account btn btn-primary" type="submit" value="{% trans 'Reset password' %}" />
 </form>
-
+</div>
 {% else %}
 
-<p>{% trans "Password reset failed" %}</p>
+ <div class="p">It seems like the password confirmation link is incorrect. Please check your email and try again.</div>
 
 {% endif %}
 
