Combined links for Help and Contact on the top navigation

--- a/teachdentistry/templates/base_teachdentistry.html
+++ b/teachdentistry/templates/base_teachdentistry.html
@@ -42,8 +42,7 @@
             </li>
         {% endblock %}
             <li class="flatpages"><a href="/pages/about/">ABOUT</a></li>
-            <li class="flatpages"><a href="/pages/help/">HELP</a></li>
-            <li class="flatpages"><a href="/pages/contact/">CONTACT</a></li>
+            <li class="flatpages"><a href="/pages/help/">HELP & CONTACT</a></li>
         </ul>
         {% block topnavbarleftitems %}{% endblock %}
         {% block topnavbarrightitems %}{% endblock %}
